--- a/Vitest/doc/01 3A測試模式.md
+++ b/Vitest/doc/01 3A測試模式.md
@@ -30,18 +30,18 @@ test('測試1+2+3是否為6', () => {
 import { test, expect } from 'vitest';
 import { add } from './math';
 
-test('測試1+2+3是否為6', () => {
+test('測試 1+2+3 是否為 6', () => {
   // 測試的 3A 原則如下 :
   // 1. Arrange安排階段 : 定義"測試環境"跟"值"
   //    a. 建立變數來存放要測試的變量 (若有不同測試則變更此處)。
-  const numbers = [1, 2, 3];
+  const input = [1, 2, 3];
   //    b. 建立變數來存放要斷言的變量 (若有不同測試結果則變更此處)。
-  const expectResult = numbers.reduce((value1, value2) => {
+  const expectResult = input.reduce((value1, value2) => {
     return value1 + value2;
   }, 0);
 
   // 2. Act執行階段 : 執行需要測試的函式 。
-  const result = add(numbers);
+  const result = add(input);
 
   // 3. Assert斷言階段 : 執行測試，評估結果。
   expect(result).toBe(expectResult);
