Json Server 新增文件03

--- a/JSON-Server/doc/01 資料格式設計.md
+++ b/JSON-Server/doc/01 資料格式設計.md
@@ -10,6 +10,7 @@
 {
   "users": [
     {
+      "id": 1,
       "name": "James",
       "age": 25,
       "mail": "test@gmail.com"
@@ -20,10 +21,10 @@
       "title": "產品A",
       "origin_price": 1250,
       "price": 1000,
-      "description": "產品描述"
+      "desc": "產品描述"
     }
   ],
-  "order": [
+  "orders": [
     {
       "order_id": "athur129492",
       "create_at": 1523539519,
