JSON server 新增05文件

--- a/JSON-Server/doc/03 關連式資料庫.md
+++ b/JSON-Server/doc/03 關連式資料庫.md
@@ -33,8 +33,8 @@
 > posts 資料內的 **userId** 即為關聯 users 內 id 的意思，撰寫方式請遵循小駝峰。
 
 ```http
-Get /posts?_expand=user
-Get /posts/1?_expand=user
+GET /posts?_expand=user
+GET /posts/1?_expand=user
 ```
 
 2. 使用 **`_embed`** 來關聯 **子層id** 的資料，用來拓展資料內容。
@@ -42,8 +42,8 @@ Get /posts/1?_expand=user
 > 每筆貼文需要額外帶入貼文內容，就能使用該語法來關聯，關聯方式同 **_expand**。
 
 ```http
-Get /posts?_embed=comments
-Get /posts/1?_embed=comments
+GET /posts?_embed=comments
+GET /posts/1?_embed=comments
 ```
 
 3. 或者你可以混用 **`_expand`** 和 **`_embed`** 。
@@ -51,7 +51,7 @@ Get /posts/1?_embed=comments
 > 混用可以同時取得留言者跟評論內容，缺點是資料量可能會很龐大，所以實務上後端可能會分成 **兩隻 API** 來取得再由前端自行組合資料，在選染畫面。
 
 ```http
-Get /posts?_embed=comments&_expand=user
+GET /posts?_embed=comments&_expand=user
 ```
 
 4. 你也可以取得嵌套資源 (取得某項貼文留言)，或寫入某項資源 (針對某項貼文留言)。
