--- a/JSON-Server/doc/05 授權流程.md
+++ b/JSON-Server/doc/05 授權流程.md
@@ -106,3 +106,31 @@ JSON Server Auth 提供 **`路由 middlewares`** 來做為路由防護，並以 
     </tr>
   </tbody>
 </table>
+
+
+## Cookie 操作🍪
+
+**Cookie** 和 **LocalStorage** 、 **SessionStorage** 一樣為瀏覽器儲存空間，Cookie 常被用來保持使用者的登入狀態，儲存空間僅 4KB。
+
+#### Cookie 的三個主要用途 :
+
+- **`Session 管理 :`** token存取、帳號登入。
+- **`個人化 :`** 使用者設定、佈景主題。
+- **`追蹤 :`** 使用一些工具紀錄並分析使用者的行為。
+
+#### 寫入 Token 至 Cookie :
+
+Cookie 是使用 `key=value;` 鍵值形式來帶入字串資料，並以 `;` 來分隔，常帶入以下三個參數。
+
+- **`token :`** 用來儲存 JSON Server 回傳的 accessToken 資料。
+- **`expires :`** 設置該 Cookie 過期時間，告知瀏覽器何時將其刪除。
+- **`path :`** 告訴瀏覽器 Cookie 在什麼路徑下才可存取 (預設是當前路徑)。
+
+```js
+// 存入 Cookie
+document.cookie = `token=${token}; expires=${expires}; path=/`
+```
+
+#### 讀取 Cookie 中的 Token :
+
+(代補充...)
