--- a/JSON-Server/doc/05 授權流程.md
+++ b/JSON-Server/doc/05 授權流程.md
@@ -114,7 +114,7 @@ JSON Server Auth 提供 **`路由 middlewares`** 來做為路由防護，並以 
 
 #### Cookie 的三個主要用途 :
 
-- **`Session 管理 :`** token存取、帳號登入。
+- **`Session 管理 :`** token存取、帳號登入、狀態及權限。
 - **`個人化 :`** 使用者設定、佈景主題。
 - **`追蹤 :`** 使用一些工具紀錄並分析使用者的行為。
 
@@ -133,4 +133,10 @@ document.cookie = `token=${token}; expires=${expires}; path=/`
 
 #### 讀取 Cookie 中的 Token :
 
-(代補充...)
+使用 Regular Express 來取得 token 的值，並存入至 Authorization 中。
+
+```js
+// 將 token 從 Cookie 中取出
+const token = document.cookie.replace(/(?:(?:^|.*;\s*)token\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+axios.defaults.headers.common['Authorization'] = token;
+```
