新增TS專案流程

--- a/TypeScript/doc/01 基礎類型.md
+++ b/TypeScript/doc/01 基礎類型.md
@@ -75,7 +75,7 @@ const tuple2: [number, boolean][] = [[100, true], [59, false]];
 
 ## Object 物件類型
 
-物件的直接定義方式較為單純，進階用法是使用 *`type`* 、 *`inteface`* 來定義。
+物件的直接定義方式較為單純，進階用法是使用 **_[type](#type-型別別名)_**  、 **_[inteface](#interface-介面)_** 來定義。
 
 ```js
 // 透過型別推論
