--- a/TypeScript/doc/01 基礎類型.md
+++ b/TypeScript/doc/01 基礎類型.md
@@ -1,7 +1,7 @@
 01 基礎類型
 ---
 
-## 原始資料類型
+## 原始資料類型（Primitive Types）:
 
 原始資料型別分別為 : `string`、`number`、`boolean`、`undefined`、`null`。
 
@@ -33,7 +33,7 @@ let u: undefined = undefined;
 let n: null = null;
 ```
 
-## any 類型 (任意值)
+### any 類型 (任意值)
 
 允許賦值對象中途改變型別，但等同於捨棄 `TS類型檢查` 的功能。
 
@@ -43,7 +43,35 @@ myAge = '17';
 myAge = true;
 ```
 
-## Array 陣列類型
+---
+
+## 物件類型（Object Types）:
+
+物件型別分別為 : `Function`、`Array`、`Tuple`、`Object`。
+
+
+### Function 函式類型
+
+分為 `函式陳述式`、`函式表達式`，可以定義參數及回傳值的型別。
+
+```js
+// 函式陳述式 : 回傳 number
+function add(a: number, b: number):number {
+  return a+b;
+}
+// 函式表達式 % 搭配箭頭函式 : 回傳 string
+let strAdd = (str1: string, str2: string):string => {
+  return str1 + str2;
+}
+// 空值回傳 void : 當執行非回傳行為時，可以使用
+function printMessage(message: string): void {
+  // 非回傳行為程式 ...
+  alert(message);
+  document.querySelector('#app').innerHTML = `<h1>${message}</h1>`;
+}
+```
+
+### Array 陣列類型
 
 TS定義陣列類型的方法有很多 :
 
@@ -59,9 +87,16 @@ const array2: (number | string)[] = [1, 2, '3'];
 
 // 陣列泛型。
 const array4: Array<string | number> = []
+
+// 實際案例 :
+// 二維陣列，當週食譜菜單。
+let weeklyMenu: string[][] = [
+    ['chicken', 'tomatoes', 'basil'], // 星期一
+    ['beef', 'potatoes', 'green beans'], // 星期二
+];
 ```
 
-## Tuple 元組類型
+### Tuple 元組類型
 
 透過定義每個類型來保持資料的建立規則 :
 
@@ -71,9 +106,21 @@ const tuple1: [number, string, boolean] = [100, 'Neil', true];
 
 // 也可以宣告二維陣列的元組。
 const tuple2: [number, boolean][] = [[100, true], [59, false]];
+
+// 實際案例 :
+// CSV 資料格式
+let csvData: [number, string, string, number][] = [
+  [1, 'Alice', 'Developer', 5000],
+  [2, 'Bob', 'Designer', 4500],
+  [3, 'Neil', 'Manager', 6000]
+];
+
+// 遊戲玩家資訊
+let playerA: [string, number, number];
+playerA = ['Warrior', 5, 100]; // 名字、等級、生命值
 ```
 
-## Object 物件類型
+### Object 物件類型
 
 物件的直接定義方式較為單純，進階用法是使用 **_[type](#type-型別別名)_**  、 **_[inteface](#interface-介面)_** 來定義。
 
@@ -91,7 +138,7 @@ let obj2: { name: string, age: (number | string)};
 let obj3: { name: string, age?: number};
 ```
 
-## as 斷言
+### as 斷言
 
 透過 *`as`* 加上 *`類型`* 來告訴 TS 資料的類型 :
 
@@ -112,9 +159,29 @@ async function getData() {
 };
 ```
 
-**`2. 需要訪問聯合型別中的屬性或方法時`** : (代補充...)
+**`2. 需要訪問聯合型別中的屬性或方法時`** : 當要使用特定型別方法卻產生衝突時，可直接 `斷言` 特定型別，避免 TS 產生錯誤提示。
 
-**`3. 強制斷言`** : 當 TS 無法判斷一個資料類型轉換是否正確而報錯時，可以使用強制斷言直接告訴 TS 該資料類型為何。
+```js
+// 範例 : 取得一串句子的長度
+function getStentence(word: string | number) {
+  // 1. 透過 as 進行斷言
+  // return (word as string).length;
+
+  // 2. 箭頭括弧包裹型別 進行斷言
+  return (<string>word).length;
+}
+```
+
+**`3. 讀取 HTML DOM 元素時`** : 當需要讀取DOM元素時，需斷言為指定HTML型別。
+
+```js
+// 範例 : 讀取表單個人資訊
+const nameInput = document.querySelector('.name') as HTMLInputElement;
+const emailInput = document.querySelector('.email') as HTMLInputElement;
+const telInput = document.querySelector('.tel') as HTMLInputElement;
+```
+
+**`4. 強制斷言`** : 當 TS 無法判斷一個資料類型轉換是否正確而報錯時，可以使用強制斷言直接告訴 TS 該資料類型為何。
 
 *`as`* 加上 *`unknow`* 加上 *`as`* 加上 *`類型`* 來強制定義類型。
 
@@ -126,7 +193,7 @@ let dataA = 100;
 let dataB = dataA as unknown as string;
 ```
 
-## Type 型別別名
+### Type 型別別名
 
 #### 【基礎】Type 定義
 
