修改:圖片路徑

--- a/Vitest/doc/02 增加更多測試及修正.md
+++ b/Vitest/doc/02 增加更多測試及修正.md
@@ -53,7 +53,7 @@ it('輸入字串數字能正確產生加總', () => {
 
 運行 ```npm test``` 後結果
 
-![Alt text](image.png)
+![Alt text](../img/image.png)
 
 這時候需要檢查 [add()]() 函式找出問題並調整合理的結果。
 
@@ -74,7 +74,7 @@ export function add(number) {
 
 重新運行測試 (皆 passed)
 
-![Alt text](image-1.png)
+![Alt text](../img/image-1.png)
 
 ## 補充其他測試
 
