--- a/Vitest/doc/05 了解測試環境設定檔.md
+++ b/Vitest/doc/05 了解測試環境設定檔.md
@@ -107,3 +107,21 @@ export default defineConfig({
   }
 )
 ```
+
+## 🔗添加 Vitest UI 套件
+
+透過 Vitest UI 來運行一個伺服器介面，可以透過以下指令進行安裝 :
+
+```bash
+npm i -D @vitest/ui
+```
+
+在 package.json 的 scripts 下添加 **`vitest --ui`** 指令來啟用 UI 介面。
+
+```bash
+"vitest:ui": "vitest --ui"
+```
+
+運行指令後會開啟一個測試的介面。
+
+![alt text](../img/image-4.png)
