doc: 新增 ＆修改文件
新增：新增 03章節

修改：將01內容拆分至02章節

--- a/TypeScript/doc/01 基礎類型.md
+++ b/TypeScript/doc/01 基礎類型.md
@@ -1,34 +1,57 @@
 01 基礎類型
 ---
 
+##### 目錄
+- [原始資料類型（Primitive Types）](#原始資料類型primitive-types)
+  - [字串類型](#字串類型)
+  - [數值類型](#數值類型)
+  - [布林值](#布林值)
+  - [Undefined、Null 類型](#undefined-及-null-類型)
+  - [any 類型 (任意值)](#any-類型-任意值)
+- [物件類型（Object Types）](#物件類型object-types)
+  - [Function 函式類型](#function-函式類型)
+  - [Array 陣列類型](#array-陣列類型)
+  - [Tuple 元組類型](#tuple-元組類型)
+  - [Object 物件類型](#object-物件類型)
+  - [as 斷言](#as-斷言)
+- [Type 型別別名](#type-型別別名)
+  - [【基礎】Type 定義](#基礎type-定義)
+  - [【進階】Type 擴充](#進階type-擴充)
+- [Interface 介面](#interface-介面)
+  - [【基礎】Interface 定義](#基礎interface-定義)
+  - [【進階】Interface 擴充](#進階interface-擴充)
+  - [【進階】Interface 合併](#進階interface-合併)
+  - [【進階】declare module 擴充外部 Interface](#進階declare-module-擴充外部-interface)
+
+
 ## 原始資料類型（Primitive Types）:
 
 原始資料型別分別為 : `string`、`number`、`boolean`、`undefined`、`null`。
 
 ### 字串類型
 
-```js
+```ts
 let myName: string = 'Neil';
 let myAge: string;
 ```
 
 ### 數值類型
 
-```js
+```ts
 let num: number = 100;
 let price: number;
 ```
 
 ### 布林值
 
-```js
+```ts
 let isTure: boolean = true;
 let isFalse: boolean;
 ```
 
-### Undefined、Null 類型
+### Undefined 及 Null 類型
 
-```js
+```ts
 let u: undefined = undefined;
 let n: null = null;
 ```
@@ -37,7 +60,7 @@ let n: null = null;
 
 允許賦值對象中途改變型別，但等同於捨棄 `TS類型檢查` 的功能。
 
-```js
+```ts
 let myAge: any = 17;
 myAge = '17';
 myAge = true;
@@ -54,7 +77,7 @@ myAge = true;
 
 分為 `函式陳述式`、`函式表達式`，可以定義參數及回傳值的型別。
 
-```js
+```ts
 // 函式陳述式 : 回傳 number
 function add(a: number, b: number):number {
   return a+b;
@@ -75,7 +98,7 @@ function printMessage(message: string): void {
 
 TS定義陣列類型的方法有很多 :
 
-```js
+```ts
 // 透過型別推論。
 const array1 = [1, 2, 3];
 
@@ -100,7 +123,7 @@ let weeklyMenu: string[][] = [
 
 透過定義每個類型來保持資料的建立規則 :
 
-```js
+```ts
 // 指定出現的類型，且固定數量並保持順序。
 const tuple1: [number, string, boolean] = [100, 'Neil', true];
 
@@ -124,7 +147,7 @@ playerA = ['Warrior', 5, 100]; // 名字、等級、生命值
 
 物件的直接定義方式較為單純，進階用法是使用 **_[type](#type-型別別名)_**  、 **_[inteface](#interface-介面)_** 來定義。
 
-```js
+```ts
 // 透過型別推論
 let obj1 = {
   name: 'Neil', 
@@ -142,7 +165,7 @@ let obj3: { name: string, age?: number};
 
 透過 *`as`* 加上 *`類型`* 來告訴 TS 資料的類型 :
 
-```js
+```ts
 let name2: unknown = 'Neil';
 let name3 = name2 as string;
 ```
@@ -151,7 +174,7 @@ let name3 = name2 as string;
 
 **`1. AJAX 非同步取回資料`** : 由於外部資料 TS 並不知道會有什麼內容，因此我們透過 as 來手動定義資料內容及類型。
 
-```js
+```ts
 async function getData() {
   const res = await fetch('https://jsonplaceholder.typicode.com/todos/1');
   // 透過 as 主動告訴 TS 回傳資料類型
@@ -161,7 +184,7 @@ async function getData() {
 
 **`2. 需要訪問聯合型別中的屬性或方法時`** : 當要使用特定型別方法卻產生衝突時，可直接 `斷言` 特定型別，避免 TS 產生錯誤提示。
 
-```js
+```ts
 // 範例 : 取得一串句子的長度
 function getStentence(word: string | number) {
   // 1. 透過 as 進行斷言
@@ -174,7 +197,7 @@ function getStentence(word: string | number) {
 
 **`3. 讀取 HTML DOM 元素時`** : 當需要讀取DOM元素時，需斷言為指定HTML型別。
 
-```js
+```ts
 // 範例 : 讀取表單個人資訊
 const nameInput = document.querySelector('.name') as HTMLInputElement;
 const emailInput = document.querySelector('.email') as HTMLInputElement;
@@ -185,107 +208,10 @@ const telInput = document.querySelector('.tel') as HTMLInputElement;
 
 *`as`* 加上 *`unknow`* 加上 *`as`* 加上 *`類型`* 來強制定義類型。
 
-```js
+```ts
 let dataA = 100;
 // 過程處理程式碼...
 
 // 先將資料斷言成 unknow類型 在斷言成 string，確保正確判斷。
 let dataB = dataA as unknown as string;
-```
-
-### Type 型別別名
-
-#### 【基礎】Type 定義
-
-使用 *`type`* 關鍵字加上 *`型別別名`* 搭配 *`=`* 來定義資料。
-
-> 型別別命 : 自定義名稱來代表型別，使用大駝峰命名。
-
-```js
-// 對變數定義。
-type LiveName = string | boolean | number;
-let data: LiveName;
-
-// 對陣列定義。
-type Array = (string | number)[];
-let array: Array;
-
-// 對 Tuple 定義。
-type Tuple = [string, number, boolean];
-let tuple: Tuple;
-
-// 對物件進行定義。
-type Obj = { name: string, age: number};
-let obj: Obj;
-```
-
-#### 【進階】Type 擴充
-
-擴充概念為繼承原本物件特性來額外拓展資料內容，並且不會影響原本物件，來提高物件使用的靈活性。
-
-**`擴充情境`** : 如果門是一個類別，車是一個類別，但兩個都需要防盜系統變成防盜門跟防盜車，這時候防盜系統就會是這兩個的子類別，就可以額外實現警報功能來擴充至這兩個類別之中。
-
-使用 *`&`* 加上 *`{ 擴充屬性: 類型 }`* 來擴充資料。
-
-```js
-// 先定義警報類別。
-type Alarm  = { alarmMsg: string; };
-// 將警報系統定義至門類別，並額外擴充屬性。
-type Door = Alarm & { doorName: string; };
-// 將警報系統定義至車類別。
-type Car = Alarm;
-
-let door: Door = {
-  alarmMsg: '警報訊息',
-  doorName: '警報門',
-};
-
-let car: Car = {
-  alarmMsg: '警報訊息',
-}
-```
-
-## Interface 介面
-
-#### 【基礎】Interface 定義
-
-使用 *`interface`* 關鍵字加上 *`型別別名`* 搭配 *`{}`* 來定義資料。
-
-> Interface 僅能定義 **物件類型** 的資料。
-
-```js
-// 對物件進行定義。
-interface UserCard {
-  name: string,
-  desc: string,
-  age?: number,
-};
-
-const card: UserCard = {
-  name: 'Neil',
-  desc: '卡片描述',
-  // age 為可選屬性，可加可不加。
-};
-```
-
-#### 【進階】Interface 擴充
-
-Interface 擴充概念類似於 Type ，但仍有些許不同，Interface 屬於繼承概念。
-
-使用 *`extends`* 關鍵字加上 *`型別別名 { 擴充屬性: 類型 }`* 來擴充資料。
-
-```js
-// 先定義警報介面。
-interface Alarm {
-  alarmMsg: string
-}
-// 定義門介面，並繼承警報介面的內容，在額外擴充屬性。
-interface Door extends Alarm {
-  doorName: string;
-}
-
-let door: Door = {
-  alarmMsg: '警報訊息',
-  doorName: '警報門'
-}
 ```
