--- a/TypeScript/doc/01 基礎類型.md
+++ b/TypeScript/doc/01 基礎類型.md
@@ -1,4 +1,10 @@
-01 基礎類型
+# 01 基礎類型
+---
+
+**專寫日期 : 2024/12/07**
+
+**相關連結 : []()**
+
 ---
 
 ##### 目錄
@@ -14,6 +20,8 @@
   - [Tuple 元組類型](#tuple-元組類型)
   - [Object 物件類型](#object-物件類型)
   - [as 斷言](#as-斷言)
+
+---
 
 
 ## 原始資料類型（Primitive Types）:
