--- a/TypeScript/doc/03 泛型.md
+++ b/TypeScript/doc/03 泛型.md
@@ -1,7 +1,11 @@
 # 03 泛型 Generics
 ---
 
-泛型 Generics 是指當定義函式、類別、介面時，不預先定義類型，而是在使用時再指定類型的定義方式。
+**專寫日期 : 2024/12/07**
+
+**相關連結 : [TS 新手指南-泛型](https://willh.gitbook.io/typescript-tutorial/advanced/generics)、[TS官網-Generics](https://www.typescriptlang.org/docs/handbook/2/generics.html)**
+
+---
 
 ##### 目錄
 - [定義方式](#定義方式)
@@ -10,6 +14,11 @@
 	- [turple泛型](#turple泛型)
 - [泛型約束-generic-contraints](#泛型約束-generic-contraints)
 
+##### 說明
+
+泛型 Generics 是指當定義函式、類別、介面時，不預先定義類型，而是在使用時再指定類型的定義方式。
+
+---
 
 ## 定義方式
 
