--- a/TypeScript/doc/04 字串字面量.md
+++ b/TypeScript/doc/04 字串字面量.md
@@ -17,7 +17,7 @@
 
 ##### 說明
 
-字串字面量 (String Literal Types) 是 TypeScript 提供的一種類型，允許變數只能是否些字串值，對於限制使用變數範圍非常有用。
+`字串字面量 (String Literal Types)` 是 TypeScript 提供的一種類型，允許變數只能是否些字串值，對於限制使用變數範圍非常有用。
 
 > [!NOTE]
 > 字串字面量和一般字串類型 `string` 不同， `string` 可以是任何字串，而字串字面量類型則是限制在`一個`或`多個`具體的字串值。
@@ -28,7 +28,7 @@
 
 ## 範例
 
-下方範例中，定義只能傳入特定值的 Direction 類型，並限制只能傳入 'up', 'down', 'left', 'right'。若不屬於這些值，則 TypeScript 則會報錯。
+下方範例中，定義只能傳入特定值的 Direction 類型，並限制只能傳入 `up`, `down`, `left`, `right`。若不屬於這些值，則 TypeScript 則會報錯。
 
 ```ts
 // 定義 Direction 字串字面量
@@ -56,13 +56,14 @@ move('center') // ❌ Error: Argument of type '"center"' is not assignable to pa
 
 假設你正在開發一個簡單的線上商店應用程式，這個應用程式需要根據使用者的會員等級和購物車總金額來計算並返回最終的折扣。會員等級分為 'basic'、'premium' 和 'vip'。不同會員等級的折扣規則如下：
 
-- 'basic' 會員沒有折扣。
-- 'premium' 會員在購物車總金額超過 1000 時可享受 10% 的折扣。
-- 'vip' 會員無論購物車總金額多少，都可享受 20% 的折扣。
+- `basic` 會員沒有折扣。
+- `premium` 會員在購物車總金額超過 1000 時可享受 10% 的折扣。
+- `vip` 會員無論購物車總金額多少，都可享受 20% 的折扣。
 
-請你完成以下 TypeScript 程式碼，實現 calculateDiscount 函數，並確保只有合法的會員等級可以被傳入。
+請你完成以下 TypeScript 程式碼，實現 `calculateDiscount` 函數，並確保只有合法的會員等級可以被傳入。
 
 ```ts
+// 定義會員等級
 type MembershipLevel = 'basic' | 'premium' | 'vip';
 
 function calculateDiscount(level: MembershipLevel, totalAmount: number): number {
