更新 React spec 相關內容

--- a/TypeScript/doc/04 字串字面量.md
+++ b/TypeScript/doc/04 字串字面量.md
@@ -54,7 +54,7 @@ move('center') // ❌ Error: Argument of type '"center"' is not assignable to pa
 
 ##### 題目
 
-假設你正在開發一個簡單的線上商店應用程式，這個應用程式需要根據使用者的會員等級和購物車總金額來計算並返回最終的折扣。會員等級分為 'basic'、'premium' 和 'vip'。不同會員等級的折扣規則如下：
+假設你正在開發一個簡單的線上商店應用程式，這個應用程式需要根據使用者的會員等級和購物車總金額來計算並返回最終的折扣。會員等級分為 `basic`、`premium` 和 `vip`。不同會員等級的折扣規則如下：
 
 - `basic` 會員沒有折扣。
 - `premium` 會員在購物車總金額超過 1000 時可享受 10% 的折扣。
